Update bom 0.4.3 (#76)